# ngram-lm-in-python

./: README.md  app.py  ngram.py  pyproject.toml
data/: preprocess.py
